v.0.91 wrap issue

--- a/css/main.css
+++ b/css/main.css
@@ -122,7 +122,11 @@ body {
   width: 100%;
   height: 9.375vw;
   padding-top: 2.7083333333vw;
-  background-image: linear-gradient(180deg, #e7e6e0 0%, rgba(231, 230, 224, 0) 100%);
+  background-image: linear-gradient(
+    180deg,
+    #e7e6e0 0%,
+    rgba(231, 230, 224, 0) 100%
+  );
   z-index: 10;
 }
 .navBar .navBar_list {
@@ -342,7 +346,12 @@ body {
 .work .clientsBlock_wrapper .clientsBlock .clientsBlock_frame .items_wrap {
   animation: scroll 50s linear infinite;
 }
-.work .clientsBlock_wrapper .clientsBlock .clientsBlock_frame .items_wrap img.logoImg {
+.work
+  .clientsBlock_wrapper
+  .clientsBlock
+  .clientsBlock_frame
+  .items_wrap
+  img.logoImg {
   flex-shrink: 0;
   height: 2.7083333333vw;
   margin-right: 3.125vw;
@@ -350,7 +359,11 @@ body {
 .work .clientsBlock_wrapper .clientsBlock .clientsBlock_frame .reverse {
   animation-direction: reverse;
 }
-.work .clientsBlock_wrapper .clientsBlock .clientsBlock_frame:hover .items_wrap {
+.work
+  .clientsBlock_wrapper
+  .clientsBlock
+  .clientsBlock_frame:hover
+  .items_wrap {
   animation-play-state: paused;
 }
 
@@ -419,7 +432,7 @@ body {
   grid-template-columns: auto auto;
   row-gap: 3.125vw;
   -moz-column-gap: 1.5625vw;
-       column-gap: 1.5625vw;
+  column-gap: 1.5625vw;
   align-items: center;
 }
 .service_content_wraper .services_content_grid .numberImg-wrapper {
@@ -498,7 +511,7 @@ body {
   padding-right: 12.5vw;
   grid-template-columns: 16.6666666667vw auto;
   -moz-column-gap: 5.2083333333vw;
-       column-gap: 5.2083333333vw;
+  column-gap: 5.2083333333vw;
   align-items: center;
 }
 .about_container_grid .about_circle {
@@ -537,7 +550,7 @@ body {
   padding-right: 12.5vw;
   grid-template-columns: 1fr 4fr;
   -moz-column-gap: 5.2083333333vw;
-       column-gap: 5.2083333333vw;
+  column-gap: 5.2083333333vw;
   align-items: center;
   position: relative;
 }
@@ -728,7 +741,7 @@ body {
   display: grid;
   grid-template-columns: 1fr 10fr;
   -moz-column-gap: 1.4583333333vw;
-       column-gap: 1.4583333333vw;
+  column-gap: 1.4583333333vw;
   row-gap: 2.0833333333vw;
   align-items: top;
 }
@@ -1136,7 +1149,12 @@ body {
     align-items: center;
     overflow: hidden;
   }
-  .work .clientsBlock_wrapper .clientsBlock .clientsBlock_frame .items_wrap img.logoImg {
+  .work
+    .clientsBlock_wrapper
+    .clientsBlock
+    .clientsBlock_frame
+    .items_wrap
+    img.logoImg {
     height: 8.5333333333vw;
     margin-right: 6.4vw;
   }
@@ -1173,7 +1191,7 @@ body {
     width: 80vw;
     height: 80vw;
     filter: blur(60px);
-    overflow: clip;
+    opacity: 0.9;
   }
   .service_content_wraper {
     margin: 0;
@@ -1184,7 +1202,7 @@ body {
     width: 100%;
     row-gap: 10.6666666667vw;
     -moz-column-gap: 6.4vw;
-         column-gap: 6.4vw;
+    column-gap: 6.4vw;
   }
   .service_content_wraper .services_content_grid .numberImg-wrapper {
     width: 21.3333333333vw;
@@ -1409,7 +1427,7 @@ body {
     padding: 60px 88px 40px 24px;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: repeat(2, auto);
+    grid-template-rows: repeat(2, 1fr);
     row-gap: 10.6666666667vw;
   }
   .footer .footer_icons {
